--- a/src/Components/Particles/Particles.css
+++ b/src/Components/Particles/Particles.css
@@ -5,8 +5,8 @@
     linear-gradient(to top left, rgb(0, 238, 255), transparent),
     linear-gradient(to top right, rgb(96, 148, 0), transparent);
     background-size: cover;
-    width: 100vmax;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
     position: fixed;
