--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -1,10 +1,10 @@
 #skill-intro {
-    position: relative;
-    top: 50px;
+    margin-top: 100px;
+    color:white;
+    font-family: 'Varela Round', sans-serif;
 }
 #skill-cards {
-    position: relative;
-    margin: 15px;
+    margin: 25px;
     display: flex;
     flex-wrap: wrap;
     top: 50px;
